<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/countrykz"
        android:textColor="@color/background"
        android:textSize="35sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/clicks"
        android:textColor="@color/background"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="85dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/carter_one"
        android:onClick="change"
        android:text="@string/change"
        android:textColor="@color/background" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/country"
        app:srcCompat="@drawable/kazakstan"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="222dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/carter_one"
        android:onClick="onClick"
        android:text="@string/tap"
        android:textColor="@color/background"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="492dp" />

</LinearLayout>